<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.cesarestudio.registrousuario.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >




            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilNombre"
                android:elevation="@dimen/elevacionElementos"

                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreCompleto"
                    android:id="@+id/tietNombre"
                    android:inputType="textShortMessage"
                    />


            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilFecha"
            android:elevation="@dimen/elevacionElementos"

            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fechaNac"
                android:id="@+id/tietFechaNac"
                android:inputType="textShortMessage"
                />


        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botonFecha"
            android:theme="@style/RaisedButton"
            android:elevation="@dimen/elevacionElementos"
            android:layout_marginTop="@dimen/margenArriba"
            android:layout_marginBottom="@dimen/margenArriba"
            android:id="@+id/btnFecha"
            />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tiTelefono"
                android:elevation="@dimen/elevacionElementos"

                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:inputType="number"
                    android:id="@+id/tietTelefono"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tiEmail"
                android:elevation="@dimen/elevacionElementos"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:id="@+id/tietEmail"
                    android:inputType="textEmailAddress"
                    />


            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tiDescripcion"
                android:elevation="@dimen/elevacionElementos"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripcion"
                    android:id="@+id/tietDescripcion"
                    />

            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/siguiente"
                android:theme="@style/RaisedButton"
                android:id="@+id/botonSiguiente"
                android:elevation="@dimen/elevacionElementos"
                />




    </LinearLayout>








</FrameLayout>
